Add button-press signal handler to the Find sidebar

This solves the bug mentioned below by handling button-press signals
in addition to the original selection-changed signals.

https://bugzilla.gnome.org/show_bug.cgi?id=703570